[project]
name = "image-resize-comfyui"
description = "This custom node provides various tools for resizing images. The goal is resizing without distorting proportions, yet without having to perform any calculations with the size of the original image. If a mask is present, it is resized and modified along with the image."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/palant/image-resize-comfyui"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "image-resize-comfyui"
Icon = ""
